# Kaestral-pro

./: .gitignore  CONTRIBUTING.md  FAQ.md  NOTICE.md  README.md  UPGRADES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.superpowers/launch/: DECISIONS.md  MOBILE-AUDIT.md  content-capabilities.md  content-pricing.md  content-usecases.md
cloud/ltx-vm/: idle-stop.sh  ltx_server.py  setup.sh
docs/: ARCHITECTURE.md  DEVELOPMENT-HISTORY.md  GCP-LTX-GUIDE.md  LAUNCH-POSTS.md  LAUNCH-RUNBOOK.md  MCP-REGISTRY.md  MCP-TOOLS.md  PROGRESS.md  PUBLISH.md  SPEC.md  STRATEGY.md  UPDATER-SETUP.md
docs/readme/: README.ar.md  README.bn.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.pt-BR.md  README.ru.md  README.tr.md  README.vi.md  README.zh-CN.md  README.zh-TW.md
fixtures/: golden-fixtures.notes.md  golden-media.json  golden-project.json
landing/: index.html  pricing.html
mcpb/: README.md  manifest.json
mcpb/server/: index.js
remotion/: .gitignore  package-lock.json  package.json  render.mjs  tsconfig.json
remotion/src/: Root.tsx
scripts/: bundle-server.mjs  prepare-resources.mjs
skills/: catalog.json
skills/art-direction/: SKILL.md
skills/beat-sync-cutting/: SKILL.md
skills/broll-planner/: SKILL.md
skills/build-in-kaestral/: SKILL.md
skills/caption-styles/: SKILL.md
skills/creative-director/: SKILL.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+149 files in other folders)
