[package]
name = "palmier-win"
version = "0.0.1"
description = "Palmier Pro — Windows port"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "palmier_win_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
