[package]
name = "maestro"
version = "0.0.1"
description = "Maestro — AI-native video editor for Windows"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "maestro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
